--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>you can scroll.</title>
+  <title>Scroller.</title>
   <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1.0"
@@ -12,7 +12,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <header>
-      <h1 class="fluid">you can<br />scroll.</h1>
+      <h1 class="fluid">If You Can<br />Scroll.</h1>
     </header>
     <main>
       <section class="content fluid">
@@ -45,10 +45,10 @@
         </ul>
       </section>
       <section>
-        <h2 class="fluid">fin.</h2>
+        <h2 class="fluid">Drake.</h2>
       </section>
     </main>
-    <footer>ʕ⊙ᴥ⊙ʔ jh3yy &copy; 2024</footer>
+    <footer>For Practice &copy; 2025</footer>
     <a
       class="bear-link"
       href="https://twitter.com/intent/follow?screen_name=jh3yy"
